--- a/co-study-room/config/config.json
+++ b/co-study-room/config/config.json
@@ -4,23 +4,20 @@
     "password": null,
     "database": "co-study-room",
     "host": "127.0.0.1",
-    "dialect": "mysql",
-    "timezone": "Asia/Tokyo" 
+    "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": null,
     "database": "database_test",
     "host": "127.0.0.1",
-    "dialect": "mysql",
-    "timezone": "Asia/Tokyo" 
+    "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
     "database": "database_production",
     "host": "127.0.0.1",
-    "dialect": "mysql",
-    "timezone": "Asia/Tokyo" 
+    "dialect": "mysql"
   }
 }
